<resources>
    <string name="app_name">Potlid</string>
    <string name="title_login">login</string>
    <string name="title_home">home</string>
    <string name="email_hint">usuario@exemplo.com</string>
    <string name="password_hint">digite sua senha aqui</string>
    <string name="email_create_hint">E-mail</string>
    <string name="name_hint">Nome</string>
    <string name="login_button_text">Entrar</string>
    <string name="forgot_password_text">Não tem conta?<b>Assine agora!</b></string>
    <string name="register_button_text">criar conta</string>
    <string name="login_text">voltar</string>
    <string name="invalid_password">Email invalido</string>
    <string name="name_empty">O campo nome está vazio</string>
    <string name="enter_email">Digite seu Email</string>
    <string name="enter_password">Digite sua senha</string>
    <string name="enter_password_check">A senha não confere</string>
    <string name="enter_password_confirme">Repita a senha</string>
    <string name="text_register">*Ao acessar voçê concorda com nossos termos e privacidade.</string>
    <string name="password_register">Senha</string>
    <string name="logout">Sair</string>
    <string name="NICK_NAME">EX: Fulano</string>
    <string name="DATA">EX: 10/02/2002</string>
    <string name="confirm_register">CONFIRMAR</string>
    <string name="password">a senha deve ser maior que 8 caracteres</string>
    <string name="error_photo">voçê precisa selecionar uma foto no seu perfil</string>
    <string name="search_people">Procurar pessoas</string>
    <string name="title_dados_basicos">Diga o nome ou apelido que gostaria de ser chamado no app</string>
    <string name="title_data_nascimento">Qual a sua data de nascimento?</string>
    <string name="title_pais">Qual o seu país de origem?</string>
    <string name="title_estado">Estado?</string>
    <string name="title_cidade">Cidade?</string>
    <string name="register">Cadastro</string>
    <string name="explorer">Explorar</string>
    <string name="APP_DATE_PATTERN">dd/MM/yyyy</string>


    <string name="success">sucesso</string>
    <string name="snack_like">Voçê curtiu a foto de %s</string>
    <string name="snack_talvez">Voçê adicionou a foto de %s na lista de talvez</string>
    <string name="my_signature">Assinatura</string>
    <string name="auth_invalid">Autenticação inválida</string>
    <string name="error_auth_caracter">Falha na autenticação, a senha deve ter pelo menos 6 caracteres</string>
    <string name="error_auth_email">Falha na autenticação, e-mail inválido inserido</string>
    <string name="error_auth_email_exist">Falha na autenticação, e-mail já registrado.</string>

    <string name="HOME">Home</string>
    <string name="USER_PROFILE">Perfil</string>
    <string name="SPLASH">splash</string>
    <string name="STORE">Shop</string>
    <string name="HOME_PRODUCT_HOME_FRAGMENT_LABEL">home</string>
    <string name="HOME_ADD_PRODUCT">Adicionar Produto</string>
    <string name="title_profile">Meu Perfil</string>
    <string name="title_createUser">create_account</string>
    <string name="title_mysignature">Assinatura</string>
    <string name="title_ListPeopleResult">ListPeopleResult</string>
    <string name="title_details">detalhes</string>
    <string name="title_favorits">Favoritos</string>
    <string name="title_success_account">create_account_success</string>
    <string name="title_InitJourneyFragment">InitJourneyFragment</string>
    <string name="title_BasicDataFragment">BasicDataFragment</string>
    <string name="title_PhysicalProfileFragment">PhysicalProfileFragment</string>
    <string name="title_ProfileGeralFragment">ProfileGeralFragment</string>
    <string name="title_searchpeople">Procurar Pessoas</string>
    <string name="title_choose">Teste</string>
    <string name="title_choose_test">TesteFragment</string>
    <string name="title_search">Procurar</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="launch_activity">Launch activity</string>
    <string name="permission_rationale">Permissão de localização necessária para a funcionalidade principal</string>
    <string name="permission_denied_explanation">A permissão foi negada, mas é necessária para a funcionalidade principal.</string>
    <string name="settings">Configuração</string>
    <string name="ok">OK</string>
    <string name="PROVISIONING_WIFI_MODAL_TITLE">Wi-Fi</string>
    <string name="PROVISIONING_WIFI_MODAL_EXPLANATION">Para continuar precisamos que o Wi-Fi esteja ligado</string>

    <string name="mural">Um relacionamento sério</string>
    <string name="mural_amizade">Só amizade</string>


    <string name="mulherNameHome">Thais, 35</string>
    <string name="mulher2NameHome">Monica, 27</string>
    <string name="mulher3NameHome">Silvia, 35</string>
    <string name="mulher4NameHome">Clara, 25</string>

    <string name="mulherKMHome">11km</string>
    <string name="mulher2KMHome">20km</string>
    <string name="mulher3KMHome">15km</string>
    <string name="mulher4KMHome">18km</string>

    <string name="mulher">Yasmin, 35</string>
    <string name="mulher1">Vitória, 25</string>
    <string name="mulher2">Lavinia, 38</string>
    <string name="mulher3">Lara, 35</string>
    <string name="mulher4">Giovana, 32</string>
    <string name="mulher5">Bruna, 28</string>
    <string name="mulher6">Vitoria, 29</string>
    <string name="mulher7">Larissa, 31</string>
    <string name="mulher8">Eduarda, 35</string>
    <string name="mulher9">Gabrielly, 38</string>
    <string name="mulher10">Beatrice, 27</string>
    <string name="mulher11">Maria, 33</string>
    <string name="mulherEnd">Rua Jatobá, 1841 Olinda-PE 53270-620</string>
    <string name="mulherEnd1">Rua São Sebastião, 260 São Caetano do Sul-SP 09580-680</string>
    <string name="mulherEnd2">Rua 13, 1516 Rio Verde-GO 75907-440</string>
    <string name="mulherEnd3">Rua Arthur Azevedo, 1105 São Gonçalo-RJ 24416-110</string>
    <string name="mulherEnd4">Quadra QI 16 Bloco B, 1839 Guará-DF 71015-622</string>
    <string name="mulherEnd5">Rua 105B, 218 Goiânia-GO 74080-290</string>
    <string name="mulherEnd6">Rua das Hortências, 389 Serra-ES 29172-025</string>
    <string name="mulherEnd7">Rua E4, 980 Guarulhos-SP 07174-393</string>
    <string name="mulherEnd8">Rua Vicente Álvares, 489 São Paulo-SP 03366-030</string>
    <string name="mulherEnd9">Rua João Silveira Camboim, 1783 Sapucaia do Sul-RS 93224-140</string>
    <string name="mulherEnd10">Rua Aureliano Gomes, 339 Franca-SP 14405-057</string>
    <string name="mulherEnd11">Rua José Carlos Gebara, 1749 Bauru-SP 17047-370</string>

    <string name="homen">Joao, 35</string>
    <string name="homen1">Paulo, 25</string>
    <string name="homen2">Mario, 38</string>
    <string name="homen3">Marcos, 35</string>
    <string name="homen4">Giovana, 32</string>
    <string name="homen5">Antonio, 28</string>
    <string name="homen6">Leonardo, 29</string>
    <string name="homen7">Luiz, 31</string>
    <string name="homen8">Eduardo, 35</string>
    <string name="homen9">Willhiam, 38</string>
    <string name="homen10">Mateus, 27</string>
    <string name="odeio">"\"Odeio gente falsa\""</string>
    <string name="primordiais">"\"Respeito e honestidade\""</string>
    <string name="aprender">"\"Atirar com metralhadora\""</string>


    <string-array name="country_names">
        <item>Brazil</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Bangladesh</item>
        <item>Belgium</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Croatia</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Egypt</item>
        <item>Ethiopia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Kenya</item>
        <item>South Korea</item>
        <item>Lebanon</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Pakistan</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Singapore</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Vietnam</item>
    </string-array>


</resources>