<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/loading_container"
        layout="@layout/fragment_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </include>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DEFAULT_0DP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/container_toolbar"
            layout="@layout/item_toolbar"
            android:layout_width="@dimen/DEFAULT_0DP"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo_image_view"
            android:layout_width="@dimen/DEFAULT_100DP"
            android:layout_height="@dimen/DEFAULT_100DP"
            android:layout_marginStart="@dimen/DEFAULT_50DP"
            android:layout_marginTop="@dimen/DEFAULT_32DP"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/container_toolbar"  />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_image_view"
            style="@style/Potlid_normal_14sp_text_black"
            android:layout_width="@dimen/DEFAULT_0DP"
            android:layout_height="@dimen/DEFAULT_100DP"
            android:layout_marginStart="@dimen/DEFAULT_20DP"
            android:layout_marginTop="@dimen/DEFAULT_32DP"
            android:layout_marginEnd="@dimen/DEFAULT_50DP"
            android:background="@drawable/ic_alert"
            android:paddingStart="@dimen/DEFAULT_30DP"
            android:paddingTop="@dimen/DEFAULT_18SP"
            android:text="Toque aqui para escolher sua foto de perfil"
            android:textSize="@dimen/DEFAULT_15SP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo_image_view"
            app:layout_constraintTop_toBottomOf="@id/container_toolbar"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_text"
            style="@style/Potlid_normal_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image_view"
            android:layout_marginHorizontal="@dimen/DEFAULT_50DP"
            android:layout_marginTop="@dimen/DEFAULT_32DP"
            android:background="@drawable/border_edit_text"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/DEFAULT_AZUL_APP_6"
            android:textColorHint="@color/DEFAULT_AZUL_APP_6"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/logo_image_view" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_text"
            style="@style/Potlid_normal_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_text"
            android:layout_marginHorizontal="@dimen/DEFAULT_50DP"
            android:layout_marginTop="@dimen/DEFAULT_16DP"
            android:background="@drawable/border_edit_text"
            android:hint="@string/email_create_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/DEFAULT_AZUL_APP_6"
            android:textColorHint="@color/DEFAULT_AZUL_APP_6"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/name_text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_text"
            style="@style/Potlid_normal_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_text"
            android:layout_marginHorizontal="@dimen/DEFAULT_50DP"
            android:layout_marginTop="@dimen/DEFAULT_16DP"
            android:background="@drawable/border_edit_text"
            android:hint="@string/password_register"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/DEFAULT_AZUL_APP_6"
            android:textColorHint="@color/DEFAULT_AZUL_APP_6"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/email_text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_confirme_edit_text"
            style="@style/Potlid_normal_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_text"
            android:layout_marginHorizontal="@dimen/DEFAULT_50DP"
            android:layout_marginTop="@dimen/DEFAULT_16DP"
            android:background="@drawable/border_edit_text"
            android:hint="@string/enter_password_confirme"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/DEFAULT_AZUL_APP_6"
            android:textColorHint="@color/DEFAULT_AZUL_APP_6"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/password_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            style="@style/Potlid_normal_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_confirme_edit_text"
            android:layout_marginHorizontal="@dimen/DEFAULT_32DP"
            android:layout_marginStart="@dimen/DEFAULT_50DP"
            android:layout_marginTop="@dimen/DEFAULT_32DP"
            android:layout_marginEnd="@dimen/DEFAULT_50DP"
            android:background="@color/DEFAULT_AZUL_APP_4"
            android:text="@string/confirm_register"
            android:textColor="@color/DEFAULT_WHITE"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/password_confirme_edit_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/back_text_view"
            style="@style/Potlid_normal_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_button"
            android:layout_marginHorizontal="@dimen/DEFAULT_50DP"
            android:layout_marginTop="@dimen/DEFAULT_16DP"
            android:gravity="center"
            android:text="@string/text_register"
            android:textColor="@color/DEFAULT_BLACK"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>